# kakuyomu-dump

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: cli.rs  html.rs  http.rs  lib.rs  main.rs  stdio.rs
